--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -1,1 +1,31 @@
-<p>new-order works!</p>
+<div class="page_header d-flex mb-4">
+    <h2 class="header_title">New Order</h2>
+</div>
+<div class="order_outer flex-wrap align-items-center justify-content-center row">
+    <div class="col-auto">
+        <div class="order_box transition">
+            <h3>Table</h3>
+        </div>
+    </div>
+    <div class="col-auto">
+        <div class="order_box transition">
+            <h3>Take Away</h3>
+        </div>
+    </div>
+    <div class="col-auto">
+        <div class="order_box transition">
+            <h3>Swiggy</h3>
+        </div>
+    </div>
+    <div class="col-auto">
+        <div class="order_box transition">
+            <h3>Uber Eats</h3>
+        </div>
+    </div>
+    <div class="col-auto">
+        <div class="order_box transition">
+            <h3>Zomato</h3>
+        </div>
+    </div>
+</div>
+
