--- a/src/app/admin/settings/categories-setting/categories-setting.component.html
+++ b/src/app/admin/settings/categories-setting/categories-setting.component.html
@@ -7,7 +7,7 @@
 
 
 <div class="table_outerWrapper mat-elevation-z8 mt-20">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
+    <table mat-table [dataSource]="dataSource?.data" matSort class="mat-elevation-z8 w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
@@ -23,21 +23,28 @@
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="title">
+        <ng-container matColumnDef="categoryName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.categoryName}} </td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="discription">
+        <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.discription}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+        </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="isActive">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active? </th>
+            <td mat-cell *matCellDef="let element"> 
+                <mat-slide-toggle color="accent" (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getAllCategories($event.pageIndex+1)"></mat-paginator>
 </div>
 
 <div class="right_sidePannel transition" [class.active]="sidemenu">
