--- a/src/app/admin/settings/branches-setting/branches-setting.component.html
+++ b/src/app/admin/settings/branches-setting/branches-setting.component.html
@@ -1,11 +1,11 @@
 <div class="page_header d-flex mb-4">
-    <h2 class="header_title">Branches Settings</h2>
+    <h2 class="header_title">Branch</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary" (click)="sidemenu = !sidemenu">Add New</button>
+        <button mat-raised-button color="primary" (click)="updateBranch()">Add New</button>
     </div>
 </div>
 <div class="table_outerWrapper mat-elevation-z8 mt-20">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
+    <table mat-table [dataSource]="dataSource?.data" matSort class="mat-elevation-z8 w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
@@ -13,70 +13,85 @@
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                    <mat-menu #moreOption="matMenu" yPosition="above">
-                    <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
+                    <mat-menu #moreOption="matMenu">
+                    <button mat-menu-item type="button" (click)="updateBranch(element)"><mat-icon>create</mat-icon> Edit</button>
                     <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="title">
+        <ng-container matColumnDef="branchCode">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Code </th>
+            <td mat-cell *matCellDef="let element"> {{element.branchCode}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="branchTitle">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.branchTitle}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="discription">
+        <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.discription}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="address">
+        <ng-container matColumnDef="branchAddress">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-            <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.branchAddress}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="branchcode">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Branch Code </th>
-            <td mat-cell *matCellDef="let element"> {{element.branchcode}} </td>
+        <ng-container matColumnDef="isActive">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active? </th>
+            <td mat-cell *matCellDef="let element"> 
+                <mat-slide-toggle color="accent" (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getAllBranches($event.pageIndex+1)"></mat-paginator>
 </div>
 
 
 <div class="right_sidePannel transition" [class.active]="sidemenu">
     <div class="right_headerBox">
-        <h4>Add New</h4>
+        <h4 *ngIf="!this.form.get('id').value">Add New</h4>
+        <h4 *ngIf="this.form.get('id').value">Update Category</h4>
     </div>
     <div class="right_bodyWrapper">
-        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-            <mat-label>Branch title</mat-label>
-            <input type="text" matInput>
-        </mat-form-field>
-        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-            <mat-label>Discription</mat-label>
-            <input type="text" matInput>
-        </mat-form-field>
-        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-            <mat-label>Address</mat-label>
-            <input type="text" matInput>
-        </mat-form-field>
-        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-            <mat-label>Branch Code</mat-label>
-            <input type="text" matInput>
-        </mat-form-field>
+        <form [formGroup]="form" (submit)="saveBranch($event)">
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Branch Code</mat-label>
+                <input type="text" formControlName="branchCode" matInput>
+            </mat-form-field>
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Branch Title</mat-label>
+                <input type="text" formControlName="branchTitle" matInput>
+            </mat-form-field>
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Discription</mat-label>
+                <input type="text" formControlName="description" matInput>
+            </mat-form-field>
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Branch Address</mat-label>
+                <input type="text" formControlName="branchAddress" matInput>
+            </mat-form-field>
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Description</mat-label>
+                <input type="text" formControlName="description" matInput>
+            </mat-form-field>
 
-        <div class="d-flex justify-content-between">
-            <button mat-raised-button color="primary">Add</button>
-            <button mat-raised-button color="warn" (click)="sidemenu = !sidemenu">Cancel</button>
-        </div>
+            <div class="d-flex align-items-center mb-20 mt-10">
+                <p class="my-0 mr-20">Is Active?</p>
+                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+            </div>
+    
+            <div class="d-flex justify-content-between">
+                <button mat-raised-button color="primary" type="submit">{{ (this.form.get('id').value)?'Update':'Add'}}</button>
+                <button mat-raised-button color="warn" type="button" (click)="cancelUpdate()">Cancel</button>
+            </div>
+        </form>
     </div>
 </div>
-<div class="backdrop" [class.active]="sidemenu" (click)="sidemenu = !sidemenu"></div>
+<div class="backdrop" [class.active]="sidemenu" (click)="cancelUpdate()"></div>
