--- a/src/app/admin/settings/categories-setting/categories-setting.component.html
+++ b/src/app/admin/settings/categories-setting/categories-setting.component.html
@@ -1,7 +1,7 @@
 <div class="page_header d-flex mb-4">
-    <h2 class="header_title">Categories Settings</h2>
+    <h2 class="header_title">Category</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary" (click)="sidemenu = !sidemenu">Add New</button>
+        <button mat-raised-button color="primary" (click)="updateCategory()">Add New</button>
     </div>
 </div>
 
@@ -15,25 +15,28 @@
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                    <mat-menu #moreOption="matMenu" yPosition="above">
-                    <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
+                    <mat-menu #moreOption="matMenu">
+                    <button mat-menu-item type="button" (click)="updateCategory(element)"><mat-icon>create</mat-icon> Edit</button>
                     <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="categoryName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
             <td mat-cell *matCellDef="let element"> {{element.categoryName}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
             <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
-        <!-- Weight Column -->
+
+        <ng-container matColumnDef="branch">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
+            <td mat-cell *matCellDef="let element"> {{element.branch?.branchTitle}} </td>
+        </ng-container>
+        
         <ng-container matColumnDef="isActive">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active? </th>
             <td mat-cell *matCellDef="let element"> 
@@ -49,22 +52,37 @@
 
 <div class="right_sidePannel transition" [class.active]="sidemenu">
     <div class="right_headerBox">
-        <h4>Add New</h4>
+        <h4 *ngIf="!this.form.get('id').value">Add New</h4>
+        <h4 *ngIf="this.form.get('id').value">Update Category</h4>
     </div>
-    <div class="right_bodyWrapper">
-        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-            <mat-label>Category</mat-label>
-            <input type="text" matInput>
-        </mat-form-field>
-        <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-            <mat-label>Discription</mat-label>
-            <input type="text" matInput>
-        </mat-form-field>
+    <div class="right_bodyWrapper" [formGroup]="form">
+        <form [formGroup]="form" (submit)="saveCategory($event)">
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Category</mat-label>
+                <input type="text" formControlName="categoryName" matInput>
+            </mat-form-field>
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Discription</mat-label>
+                <input type="text"  formControlName="description" matInput>
+            </mat-form-field>
+            
+            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
+                <mat-label>Branch</mat-label>
+                <mat-select matNativeControl formControlName="branch_id">
+                    <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                </mat-select>
+            </mat-form-field>
 
-        <div class="d-flex justify-content-between">
-            <button mat-raised-button color="primary">Add</button>
-            <button mat-raised-button color="warn" (click)="sidemenu = !sidemenu">Cancel</button>
-        </div>
+            <div class="d-flex align-items-center mb-20 mt-10">
+                <p class="my-0 mr-20">Is Active?</p>
+                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+            </div>
+
+            <div class="d-flex justify-content-between">
+                <button mat-raised-button color="primary" type="submit">{{ (this.form.get('id').value)?'Update':'Add'}}</button>
+                <button mat-raised-button color="warn" type="button" (click)="cancelUpdate()">Cancel</button>
+            </div>
+        </form>
     </div>
 </div>
-<div class="backdrop" [class.active]="sidemenu" (click)="sidemenu = !sidemenu"></div>
+<div class="backdrop" [class.active]="sidemenu" (click)="cancelUpdate()"></div>
