--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="page_header d-flex mb-4">
     <h2 class="header_title">Items</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary">Add New</button>
+        <button mat-raised-button color="primary" routerLink="/admin/products/new">Add New</button>
     </div>
 </div>
 
