--- a/src/app/admin/settings/add-order-type/add-order-type.component.html
+++ b/src/app/admin/settings/add-order-type/add-order-type.component.html
@@ -60,9 +60,15 @@
                 <ng-container matColumnDef="noofchairs">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> No of chairs </th>
                     <td mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" class="ew-180 pb-0">
-                            <input matInput type="text" placeholder="Enter number here">
-                        </mat-form-field>
+                        <div class="input-group mb-0 number_input">
+                            <div class="input-group-prepend">
+                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">-</button>
+                            </div>
+                            <input type="text" class="form-control">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="button" id="button-addon1">+</button>
+                              </div>
+                        </div>
                     </td>
                 </ng-container>
 
@@ -100,7 +106,7 @@
     </div>
     
     <div class="button_wrapper">
-        <button mat-raised-button color="primary" routerLink="/admin/settings/new-order-type" class="mr-20">Add</button>
-        <button mat-raised-button color="warn" routerLink="/admin/settings/new-order-type">Cancel</button>
+        <button mat-raised-button color="primary" class="mr-20">Add</button>
+        <button mat-raised-button color="warn" >Cancel</button>
     </div>
 </div>
