--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -62,13 +62,14 @@
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
                     <td mat-cell *matCellDef="let element"> 
-                        <button mat-icon-button [matMenuTriggerFor]="moreOption">
+                        <button mat-icon-button><mat-icon>delete</mat-icon></button>
+                        <!-- <button mat-icon-button [matMenuTriggerFor]="moreOption">
                             <mat-icon>more_vert</mat-icon>
                         </button>
                             <mat-menu #moreOption="matMenu" yPosition="above">
                             <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
                             <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
-                        </mat-menu>
+                        </mat-menu> -->
                     </td>
                 </ng-container>
         
@@ -138,7 +139,7 @@
     </div>
     
     <div class="button_wrapper">
-        <button mat-raised-button color="primary" class="mr-20">Add</button>
+        <button mat-raised-button color="primary" (click)="openSnackBar()" class="mr-20">Add</button>
         <button mat-raised-button color="warn">Cancel</button>
     </div>
 </div>
