--- a/src/app/admin/settings/add-order-type/add-order-type.component.html
+++ b/src/app/admin/settings/add-order-type/add-order-type.component.html
@@ -34,13 +34,14 @@
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
                     <td mat-cell *matCellDef="let element"> 
-                        <button mat-icon-button [matMenuTriggerFor]="moreOption">
+                        <button mat-icon-button><mat-icon>delete</mat-icon></button>
+                        <!-- <button mat-icon-button [matMenuTriggerFor]="moreOption">
                             <mat-icon>more_vert</mat-icon>
                         </button>
                             <mat-menu #moreOption="matMenu" yPosition="above">
                             <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
                             <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
-                        </mat-menu>
+                        </mat-menu> -->
                     </td>
                 </ng-container>
         
@@ -53,7 +54,11 @@
                 <!-- Weight Column -->
                 <ng-container matColumnDef="discription">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-                    <td mat-cell *matCellDef="let element"> {{element.discription}} </td>
+                    <td mat-cell *matCellDef="let element">
+                        <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200">
+                            <textarea matInput placeholder="Discription"></textarea>
+                          </mat-form-field>
+                    </td>
                 </ng-container>
         
                 <!-- Weight Column -->
