--- a/src/app/shared/components/confirm-popup/confirm-popup.component.html
+++ b/src/app/shared/components/confirm-popup/confirm-popup.component.html
@@ -1,1 +1,7 @@
-<p>confirm-popup works!</p>
+<div class="confirmBox_wrapper">
+    <p>Are you sure you want to delete this record.</p>
+    <div class="button_wrapper mt-20 text-center">
+        <button mat-raised-button color="primary" class="mx-10 ew-mn-100">Ok</button>
+        <button mat-raised-button color="warn" class="mx-10 ew-mn-100" (click)="closePopup()">Cancel</button>
+    </div>
+</div>
