--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -37,7 +37,7 @@
                     <a href="javascript:;" routerLink="/admin/settings/branches" matRipple>Branches</a>
                 </li>
                 <li routerLinkActive="active">
-                    <a href="javascript:;" routerLink="/admin/settings/orders" matRipple>Order Setting</a>
+                    <a href="javascript:;" routerLink="/admin/settings/order-type" matRipple>Order Types</a>
                 </li>
                 <li routerLinkActive="active">
                     <a href="javascript:;" routerLink="/admin/settings/feedback" matRipple>Feedback Questions</a>
