--- a/src/app/admin/settings/order-setting/order-setting.component.html
+++ b/src/app/admin/settings/order-setting/order-setting.component.html
@@ -1,7 +1,7 @@
 <div class="page_header d-flex mb-4">
-    <h2 class="header_title">Order Settings</h2>
+    <h2 class="header_title">Order Type</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary" routerLink="/admin/settings/new-order-type">Add New</button>
+        <button mat-raised-button color="primary" routerLink="/admin/settings/order-type/update">Add New</button>
     </div>
 </div>
 <div class="table_outerWrapper mat-elevation-z8 mt-20">
