--- a/src/app/admin/layout/header/header.component.scss
+++ b/src/app/admin/layout/header/header.component.scss
@@ -7,6 +7,8 @@
         list-style: none;
         margin: 0;
         padding: 0;
+        display: flex;
+        align-items: center;
 
         & > li {
             display: inline-block;
@@ -16,4 +18,15 @@
             }
         }
     }
+}
+
+.profile_box{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #f3f3f3;
+    cursor: pointer;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
