--- a/src/app/admin/settings/add-order-type/add-order-type.component.html
+++ b/src/app/admin/settings/add-order-type/add-order-type.component.html
@@ -2,116 +2,120 @@
     <h2 class="header_title">Add New Order Type</h2>
 </div>
 
-<div class="add_formWrapper">
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
-                <mat-label>Type Name</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-            <mat-form-field appearance="outline" class="w-100 pb-0">
-                <mat-label>Description</mat-label>
-                <input matInput type="text">
-            </mat-form-field>
-        </div>
-    </div>
-
-    <div class="d-flex align-items-center my-20">
-        <p class="my-0 mr-20">Table Required</p>
-        <mat-slide-toggle></mat-slide-toggle>
-    </div>
-
-    <div class="tabels_tableWrapper mb-40">
-        <div class="d-flex mb-10 tabel_header justify-content-between align-items-center">
-            <h3 class="mb-0 font-weight-500">Add Tables</h3>
-            <button mat-raised-button color="primary">Add New</button>
-        </div>
-        <div class="table_outerWrapper">
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
-                <!-- Position Column -->
-                <ng-container matColumnDef="action">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
-                    <td mat-cell *matCellDef="let element"> 
-                        <button mat-icon-button><mat-icon>delete</mat-icon></button>
-                        <!-- <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                            <mat-icon>more_vert</mat-icon>
-                        </button>
-                            <mat-menu #moreOption="matMenu" yPosition="above">
-                            <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
-                            <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
-                        </mat-menu> -->
-                    </td>
-                </ng-container>
-        
-                <!-- Name Column -->
-                <ng-container matColumnDef="tableid">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Table ID </th>
-                    <td mat-cell *matCellDef="let element"> {{element.tableid}} </td>
-                </ng-container>
-        
-                <!-- Weight Column -->
-                <ng-container matColumnDef="discription">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-                    <td mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200">
-                            <textarea matInput placeholder="Discription"></textarea>
-                          </mat-form-field>
-                    </td>
-                </ng-container>
-        
-                <!-- Weight Column -->
-                <ng-container matColumnDef="noofchairs">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No of chairs </th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="input-group mb-0 number_input">
-                            <div class="input-group-prepend">
-                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">-</button>
-                            </div>
-                            <input type="text" class="form-control">
-                            <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button" id="button-addon1">+</button>
-                              </div>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="d-flex align-items-center mb-20">
-                <p class="my-0 mr-20">Extra Info Required</p>
-                <mat-slide-toggle></mat-slide-toggle>
+<form [formGroup]="form">
+    <div class="add_formWrapper">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Type Name</mat-label>
+                    <input matInput formControlName="typeName" type="text">
+                </mat-form-field>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Description</mat-label>
+                    <input matInput formControlName="description" type="text">
+                </mat-form-field>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Branch</mat-label>
+                    <mat-select matNativeControl formControlName="branch_id">
+                        <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="d-flex align-items-center mb-20">
-                <p class="my-0 mr-20">Delivery Charge Enable</p>
-                <mat-slide-toggle></mat-slide-toggle>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="d-flex align-items-center mb-20">
-                <p class="my-0 mr-20">Extra Charge Enable</p>
-                <mat-slide-toggle></mat-slide-toggle>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="d-flex align-items-center mb-20">
-                <p class="my-0 mr-20">Disable for now</p>
-                <mat-slide-toggle></mat-slide-toggle>
-            </div>
-        </div>
-    </div>
     
-    <div class="button_wrapper">
-        <button mat-raised-button color="primary" class="mr-20">Add</button>
-        <button mat-raised-button color="warn" >Cancel</button>
+        <div class="d-flex align-items-center my-20">
+            <p class="my-0 mr-20">Table Required</p>
+            <mat-slide-toggle formControlName="enableTables"></mat-slide-toggle>
+        </div>
+    
+        <div class="tabels_tableWrapper mb-40" [hidden]="!form.get('enableTables').value">
+            <div class="d-flex mb-10 tabel_header justify-content-between align-items-center">
+                <h3 class="mb-0 font-weight-500">Add Tables</h3>
+                <button mat-raised-button color="primary" type="button" (click)="addAnotherTable()">Add New</button>
+            </div>
+            <div class="table_outerWrapper">
+                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100" formArrayName="tables">
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="action">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
+                        <td mat-cell *matCellDef="let element; let i=index;"> 
+                            <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+                        </td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="tableId">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-250"> Table ID </th>
+                        <td mat-cell *matCellDef="let element; let i=index;" [formGroupName]="i">
+                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
+                                <input matInput formControlName="tableId" type="text">
+                              </mat-form-field>
+                        </td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="description">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+                        <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
+                            <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200">
+                                <input matInput formControlName="description" type="text">
+                              </mat-form-field>
+                        </td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="noOfChair">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> No of chairs </th>
+                        <td mat-cell *matCellDef="let element; let i=index;" [formGroupName]="i">
+                            <div class="input-group mb-0 number_input">
+                                <div class="input-group-prepend">
+                                  <button class="btn btn-outline-secondary" type="button" id="button-addon1">-</button>
+                                </div>
+                                <input type="text" class="form-control" formControlName="noOfChair">
+                                <div class="input-group-append">
+                                    <button class="btn btn-outline-secondary" type="button" id="button-addon1">+</button>
+                                  </div>
+                            </div>
+                        </td>
+                    </ng-container>
+    
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </div>
+    
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex align-items-center mb-20">
+                    <p class="my-0 mr-20">Extra Info Required</p>
+                    <mat-slide-toggle></mat-slide-toggle>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="d-flex align-items-center mb-20">
+                    <p class="my-0 mr-20">Delivery Charge Enable</p>
+                    <mat-slide-toggle></mat-slide-toggle>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="d-flex align-items-center mb-20">
+                    <p class="my-0 mr-20">Extra Charge Enable</p>
+                    <mat-slide-toggle></mat-slide-toggle>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="d-flex align-items-center mb-20">
+                    <p class="my-0 mr-20">Disable for now</p>
+                    <mat-slide-toggle></mat-slide-toggle>
+                </div>
+            </div>
+        </div>
+        
+        <div class="button_wrapper">
+            <button mat-raised-button color="primary" class="mr-20">Add</button>
+            <button mat-raised-button color="warn" >Cancel</button>
+        </div>
     </div>
-</div>
+</form>
