--- a/src/app/admin/settings/order-setting/order-setting.component.html
+++ b/src/app/admin/settings/order-setting/order-setting.component.html
@@ -5,53 +5,45 @@
     </div>
 </div>
 <div class="table_outerWrapper mat-elevation-z8 mt-20">
-    <table mat-table [dataSource]="dataSource" matSort class="w-100">
-        <!-- Position Column -->
+    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
+    
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
-                <button mat-icon-button><mat-icon>delete</mat-icon></button>
-                <!-- <button mat-icon-button [matMenuTriggerFor]="moreOption">
+                <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
                     <mat-menu #moreOption="matMenu" yPosition="above">
-                    <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
-                    
-                </mat-menu> -->
+                    <button mat-menu-item type="button" [routerLink]="['/admin/settings/order-type/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
+                    <button mat-icon-button><mat-icon>delete</mat-icon></button>
+                </mat-menu>
             </td>
         </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <ng-container matColumnDef="typeName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Type Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.typeName}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="discription">
+        <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.discription}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="tablerequired">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Table required </th>
-            <td mat-cell *matCellDef="let element"> <mat-slide-toggle color="accent"></mat-slide-toggle> </td>
+        <ng-container matColumnDef="branch">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Branch </th>
+            <td mat-cell *matCellDef="let element"> {{element.branch.branchTitle }} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="inforequired">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Extra info required </th>
-            <td mat-cell *matCellDef="let element"> <mat-slide-toggle color="accent"></mat-slide-toggle> </td>
-        </ng-container>
-
-        <ng-container matColumnDef="deliverycharge">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-180"> Delivery Charge Enable </th>
-            <td mat-cell *matCellDef="let element"> <mat-slide-toggle color="accent"></mat-slide-toggle> </td>
+        <ng-container matColumnDef="isActive">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active? </th>
+            <td mat-cell *matCellDef="let element"> 
+                <mat-slide-toggle color="accent" (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getOrderTypes($event.pageIndex+1)"></mat-paginator>
 </div>
