--- a/src/app/admin/layout/component/change-password/change-password.component.html
+++ b/src/app/admin/layout/component/change-password/change-password.component.html
@@ -1,14 +1,14 @@
 <div class="popup_formWrapper">
     <h3>Change Password</h3>
-    <mat-form-field appearance="outline" class="w-100">
+    <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
         <mat-label>Old Password</mat-label>
         <input matInput placeholder="Placeholder">
     </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
+    <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
         <mat-label>New Password</mat-label>
         <input matInput placeholder="Placeholder">
     </mat-form-field>
-    <mat-form-field appearance="outline" class="w-100">
+    <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
         <mat-label>Confirm Password</mat-label>
         <input matInput placeholder="Placeholder">
     </mat-form-field>
