--- a/src/app/admin/layout/component/change-profile/change-profile.component.html
+++ b/src/app/admin/layout/component/change-profile/change-profile.component.html
@@ -1,9 +1,10 @@
 <div class="popup_formWrapper">
     <h3>Change Profile Image</h3>
-
-    <div class="profile_imrBox">
-        <input type="file" name="" id="prodctImg">
-        <label for="prodctImg" title="Change Image"></label>
+    <div class="text-center">
+        <div class="profile_imrBox">
+            <input type="file" name="" id="prodctImg">
+            <label for="prodctImg" title="Change Image"></label>
+        </div>
     </div>
 </div>
 <div class="popup_Btnfooter text-center">
