--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -1,7 +1,7 @@
 <div class="page_header d-flex mb-4">
     <h2 class="header_title">New Order</h2>
 </div>
-<div class="order_outer flex-wrap align-items-center justify-content-center row">
+<!-- <div class="order_outer flex-wrap align-items-center justify-content-center row">
     <div class="col-auto">
         <div class="order_box transition">
             <h3>Table</h3>
@@ -27,5 +27,17 @@
             <h3>Zomato</h3>
         </div>
     </div>
-</div>
+</div> -->
 
+<div class="table_form_wrapper">
+    <div class="order_typeRow">
+        <div class="type_radio">
+            <input type="radio" name="ordertype" id="tabel">
+            <label for="tabel">Table</label>
+        </div>
+        <div class="type_radio">
+            <input type="radio" name="ordertype" id="takeaway">
+            <label for="takeaway">Take Away</label>
+        </div>
+    </div>
+</div>
