--- a/src/app/admin/products/components/add-product/add-product.component.scss
+++ b/src/app/admin/products/components/add-product/add-product.component.scss
@@ -5,6 +5,7 @@ $color-warning:#bd2227;
     & .product_imrBox{
         position: relative;
         display: inline-block;
+        overflow: hidden;
         & input{
             visibility: hidden;
             position: absolute;
