--- a/src/app/admin/orders/components/new-order/new-order.component.scss
+++ b/src/app/admin/orders/components/new-order/new-order.component.scss
@@ -1,35 +1,69 @@
 $color-primary: #2e358e;
 $color-accent: #faae1a;
 $color-warning:#bd2227;
-.order_outer{
-    & .order_box{
-        width:300px;
-        margin-top: 30px;
-        border-radius: 5px;
-        // box-shadow: 0px 0px 12px rgba(#000, 0.2);
-        display: flex;
-        height: 150px;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        border: 1px solid $color-primary;
-        -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-        -ms-transform: scale(1);
-        transform: scale(1);
-        background-image: linear-gradient(45deg,rgba($color-primary, 0.2), rgba($color-warning, 0.2));
-        &:hover{
-            -webkit-transform: scale(1.05);
-            -moz-transform: scale(1.05);
-            -ms-transform: scale(1.05);
-            transform: scale(1.05);
-        }
-        & h3{
-            font-size: 2rem;
-            margin: 0px;
-            font-weight: 500;
-            color: $color-primary;
-            text-transform: uppercase;
+// .order_outer{
+//     & .order_box{
+//         width:300px;
+//         margin-top: 30px;
+//         border-radius: 5px;
+//         // box-shadow: 0px 0px 12px rgba(#000, 0.2);
+//         display: flex;
+//         height: 150px;
+//         align-items: center;
+//         justify-content: center;
+//         cursor: pointer;
+//         border: 1px solid $color-primary;
+//         -webkit-transform: scale(1);
+//         -moz-transform: scale(1);
+//         -ms-transform: scale(1);
+//         transform: scale(1);
+//         background-image: linear-gradient(45deg,rgba($color-primary, 0.2), rgba($color-warning, 0.2));
+//         &:hover{
+//             -webkit-transform: scale(1.05);
+//             -moz-transform: scale(1.05);
+//             -ms-transform: scale(1.05);
+//             transform: scale(1.05);
+//         }
+//         & h3{
+//             font-size: 2rem;
+//             margin: 0px;
+//             font-weight: 500;
+//             color: $color-primary;
+//             text-transform: uppercase;
+//         }
+//     }
+// }
+.table_form_wrapper{
+    & .order_typeRow{
+        & .type_radio{
+            display: inline-block;
+            position: relative;
+            overflow: hidden;
+            margin-right: 15px;
+            margin-bottom: 15px;
+            
+            & label{
+                width: 200px;
+                padding: 10px;
+                display: block;
+                border-radius: 5px;
+                background-color: rgba($color-accent, 0.2);
+                border: 1px solid $color-accent;
+                color: #000;
+                font-size: 1.4rem;
+                font-weight: 500;
+                text-align: center;
+                cursor: pointer;
+                text-transform: uppercase;
+            }
+            & input{
+                position: absolute;
+                visibility: hidden;
+                opacity: 0;
+                &:checked + label{
+                    background-color: $color-accent;
+                }
+            }
         }
     }
 }
