--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -15,8 +15,8 @@
     </form>
 </div>
 
-<div class="table_outerWrapper mat-elevation-z8 mt-20">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
+<div class="table_outerWrapper mat-elevation-z2 mt-20">
+    <table mat-table [dataSource]="dataSource" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
