--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -39,5 +39,116 @@
             <input type="radio" name="ordertype" id="takeaway">
             <label for="takeaway">Take Away</label>
         </div>
+        <div class="type_radio">
+            <input type="radio" name="ordertype" id="zomato">
+            <label for="zomato">Zomato</label>
+        </div>
+        <div class="type_radio">
+            <input type="radio" name="ordertype" id="sqiggy">
+            <label for="sqiggy">Swiggy</label>
+        </div>
+        <div class="type_radio">
+            <input type="radio" name="ordertype" id="ubereat">
+            <label for="ubereat">Uber Eats</label>
+        </div>
     </div>
+</div>
+
+<div class="order_stepWrapper mt-10">
+    <mat-accordion class="example-headers-align">
+        <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <h2>Select Table</h2>
+            </mat-panel-title>
+            <!-- <mat-panel-description>
+              Type your name and age
+              <mat-icon>account_circle</mat-icon>
+            </mat-panel-description> -->
+          </mat-expansion-panel-header>
+          <div class="table_selectWrapper">
+            <div class="table_col">
+                <div class="row no-gutters">
+                    <div class="table_innerBox flex-d-row col-auto order-1">
+                        <div class="table_seat_radio vertical">
+                            <input type="radio" id="t1s1">
+                            <label for="t1s1"></label>
+                        </div>
+                    </div>
+                    <div class="table_innerBox flex-d-row col-auto order-2">
+                        <div class="table_seat_radio vertical">
+                            <input type="radio" id="t1s2">
+                            <label for="t1s2"></label>
+                        </div>
+                    </div>
+                    <div class="table_innerBox col order-4">
+                        <div class="d-flex">
+                            <div class="radio_outer">
+                                <div class="table_seat_radio horizontal">
+                                    <input type="radio" id="t1s2">
+                                    <label for="t1s2"></label>
+                                </div>
+                                <div class="table_seat_radio horizontal">
+                                    <input type="radio" id="t1s2">
+                                    <label for="t1s2"></label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+          
+          <mat-action-row>
+            <button mat-button color="primary" (click)="nextStep()">Next</button>
+          </mat-action-row>
+        </mat-expansion-panel>
+      
+        <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Destination
+            </mat-panel-title>
+            <mat-panel-description>
+              Type the country name
+              <mat-icon>map</mat-icon>
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+      
+          <mat-form-field>
+            <mat-label>Country</mat-label>
+            <input matInput>
+          </mat-form-field>
+      
+          <mat-action-row>
+            <button mat-button color="warn" (click)="prevStep()">Previous</button>
+            <button mat-button color="primary" (click)="nextStep()">Next</button>
+          </mat-action-row>
+        </mat-expansion-panel>
+      
+        <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Day of the trip
+            </mat-panel-title>
+            <mat-panel-description>
+              Inform the date you wish to travel
+              <mat-icon>date_range</mat-icon>
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+      
+          <mat-form-field>
+            <mat-label>Date</mat-label>
+            <input matInput [matDatepicker]="picker" (focus)="picker.open()" readonly>
+          </mat-form-field>
+          <mat-datepicker #picker></mat-datepicker>
+      
+          <mat-action-row>
+            <button mat-button color="warn" (click)="prevStep()">Previous</button>
+            <button mat-button color="primary" (click)="nextStep()">End</button>
+          </mat-action-row>
+        </mat-expansion-panel>
+      
+    </mat-accordion>
+      
 </div>
