--- a/src/app/admin/orders/components/new-order/new-order.component.scss
+++ b/src/app/admin/orders/components/new-order/new-order.component.scss
@@ -47,8 +47,8 @@ $color-warning:#bd2227;
                 padding: 10px;
                 display: block;
                 border-radius: 5px;
-                background-color: rgba($color-accent, 0.2);
-                border: 1px solid $color-accent;
+                background-color: rgba($color-primary, 0.2);
+                border: 1px solid $color-primary;
                 color: #000;
                 font-size: 1.4rem;
                 font-weight: 500;
@@ -61,7 +61,50 @@ $color-warning:#bd2227;
                 visibility: hidden;
                 opacity: 0;
                 &:checked + label{
+                    color: #fff;
+                    background-color: $color-primary;
+                }
+            }
+        }
+    }
+}
+
+.table_selectWrapper{
+    display: flex;
+    align-items: center;
+    margin: 0px -10px;
+    flex-wrap: wrap;
+    & .table_col{
+        flex:0 0 20%;
+        max-width: 20%;
+        padding: 0px 10px;
+        
+        &.table_innerBox{
+            display: flex;
+            &.flex-d-row{
+                flex-direction: row;
+            }
+            & .radio_outer{
+                flex-direction: row;
+                justify-content: space-between;
+            }
+            & .table_seat_radio{
+                position: relative;
+                overflow: hidden;
+                & input{
+                    visibility: hidden;
+                    position: absolute;
+                    opacity: 0;
+                }
+                & label{
+                    width: 100%;
+                    height: 15px;
                     background-color: $color-accent;
+                    cursor: pointer;
+                    &.vertical{
+                        height: 100%;
+                        width: 15px;
+                    }
                 }
             }
         }
