--- a/src/app/admin/settings/branches-setting/branches-setting.component.html
+++ b/src/app/admin/settings/branches-setting/branches-setting.component.html
@@ -4,8 +4,8 @@
         <button mat-raised-button color="primary" (click)="updateBranch()">Add New</button>
     </div>
 </div>
-<div class="table_outerWrapper mat-elevation-z8 mt-20">
-    <table mat-table [dataSource]="dataSource?.data" matSort class="mat-elevation-z8 w-100">
+<div class="table_outerWrapper mat-elevation-z2 mt-20">
+    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
