--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,7 +1,7 @@
 <div class="page_header d-flex mb-4">
     <h2 class="header_title">Products</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary" routerLink="/admin/products/new">Add New</button>
+        <button mat-raised-button color="primary" routerLink="/admin/products/update">Add New</button>
     </div>
 </div>
 
@@ -16,7 +16,7 @@
 </div>
 
 <div class="table_outerWrapper mat-elevation-z2 mt-20">
-    <table mat-table [dataSource]="dataSource" matSort class="w-100">
+    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
@@ -24,9 +24,9 @@
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                    <mat-menu #moreOption="matMenu" yPosition="above">
-                    <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
+                    <mat-menu #moreOption="matMenu">
+                    <button mat-menu-item type="button" [routerLink]="['/admin/products/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
+                    <button mat-menu-item><mat-icon>delete</mat-icon> Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
@@ -48,13 +48,13 @@
 
         <ng-container matColumnDef="branch">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
-            <td mat-cell *matCellDef="let element"> {{ element.branch.branchTitle }} </td>
+            <td mat-cell *matCellDef="let element"> {{ element.branch?.branchTitle }} </td>
         </ng-container>
 
         <ng-container matColumnDef="isActive">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> is Active? </th>
             <td mat-cell *matCellDef="let element">
-                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+                <mat-slide-toggle  (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
             </td>
         </ng-container>
 
