--- a/src/app/admin/settings/order-setting/order-setting.component.html
+++ b/src/app/admin/settings/order-setting/order-setting.component.html
@@ -15,7 +15,7 @@
                 </button>
                     <mat-menu #moreOption="matMenu" yPosition="above">
                     <button mat-menu-item type="button" [routerLink]="['/admin/settings/order-type/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-icon-button><mat-icon>delete</mat-icon></button>
+                    <button mat-icon-button><mat-icon>delete</mat-icon> Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
