--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -56,7 +56,12 @@
 <div class="searchBox my-10 text-right">
   <mat-form-field appearance="outline">
     <mat-label>Number of Customers</mat-label>
-    <input matInput>
+    <mat-select>
+      <mat-option value="1">1</mat-option>
+      <mat-option value="2">2</mat-option>
+      <mat-option value="3">3</mat-option>
+      <mat-option value="4">4</mat-option>
+    </mat-select>
   </mat-form-field>
 </div>
 <div class="order_stepWrapper mt-10">
@@ -64,14 +69,14 @@
         <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <h2>Select Table</h2>
+              <h2 class="my-10">Select Table</h2>
             </mat-panel-title>
             <!-- <mat-panel-description>
               Type your name and age
               <mat-icon>account_circle</mat-icon>
             </mat-panel-description> -->
           </mat-expansion-panel-header>
-          <div class="table_selectWrapper">
+          <div class="table_selectWrapper mb-15">
             <div class="table_col">
                 <div class="row ew-130 mx-auto position-relative h-100 no-gutters">
                   <span class="table_circle">T1</span>
@@ -198,29 +203,74 @@
           </div>
           
           <mat-action-row>
-            <button mat-button color="primary" (click)="nextStep()">Next</button>
+            <button mat-raised-button color="primary" (click)="nextStep()" >Take Order</button>
           </mat-action-row>
         </mat-expansion-panel>
       
         <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" hideToggle>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Destination
+              <h2 class="my-10">Order Detail</h2>
             </mat-panel-title>
-            <mat-panel-description>
-              Type the country name
-              <mat-icon>map</mat-icon>
-            </mat-panel-description>
           </mat-expansion-panel-header>
-      
-          <mat-form-field>
-            <mat-label>Country</mat-label>
-            <input matInput>
-          </mat-form-field>
-      
+          <div class="order_detailWrapper">
+            <h3>Order No: #123456</h3>
+            <div class="row mb-20">
+              <div class="col-lg-3 col-md-5 col-sm-6 col-12">
+                <mat-form-field appearance="outline">
+                  <mat-label>Customers Name</mat-label>
+                  <mat-select>
+                    <mat-option value="jone doe">jone doe</mat-option>
+                    <mat-option value="dithesh">dithesh</mat-option>
+                    <mat-option value="kiran">kiran</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="col-lg-3 col-md-5 col-sm-6 col-12">
+                <mat-form-field appearance="outline">
+                  <mat-label>Mobile Number</mat-label>
+                  <input matInput>
+                </mat-form-field>
+              </div>
+            </div>
+            <div class="order_tableOuter">
+              <h4>Items</h4>
+              <div class="table_outerWrapper">
+                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+                  <!-- Position Column -->
+                  <ng-container matColumnDef="position">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                  </ng-container>
+                
+                  <!-- Name Column -->
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  </ng-container>
+                
+                  <!-- Weight Column -->
+                  <ng-container matColumnDef="weight">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
+                    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                  </ng-container>
+                
+                  <!-- Symbol Column -->
+                  <ng-container matColumnDef="symbol">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
+                    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                  </ng-container>
+                
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+            </div>
+          </div>
           <mat-action-row>
-            <button mat-button color="warn" (click)="prevStep()">Previous</button>
-            <button mat-button color="primary" (click)="nextStep()">Next</button>
+            <button mat-raised-button color="warn" (click)="prevStep()">Previous</button>
+            <button mat-raised-button color="primary" (click)="nextStep()">Next</button>
           </mat-action-row>
         </mat-expansion-panel>
       
@@ -242,8 +292,8 @@
           <mat-datepicker #picker></mat-datepicker>
       
           <mat-action-row>
-            <button mat-button color="warn" (click)="prevStep()">Previous</button>
-            <button mat-button color="primary" (click)="nextStep()">End</button>
+            <button mat-raised-button color="warn" (click)="prevStep()">Previous</button>
+            <button mat-raised-button color="primary" (click)="nextStep()">End</button>
           </mat-action-row>
         </mat-expansion-panel>
       
